--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,7 +41,7 @@ body {
 }
 
 .banner-section {
-  height: calc(100vh - 4rem);
+  @apply h-full md:h-[calc(100vh-4rem)];
   background: var(--blue-grdient, linear-gradient(110deg, #89D3EB 1.11%, #2F87A4 45.11%));
 }
 
@@ -73,15 +73,15 @@ body {
 
 #stats .stats-item-left:not(:last-child)::after {
   content: "";
-  @apply bg-primary/[.2] absolute top-0 right-0 bottom-0 w-[1px];
-  transform: skew(20deg);
+  @apply bg-primary/[.2] absolute top-0 right-2 bottom-0 w-[1px];
+  transform: skew(15deg);
   transform-origin: top right;
 }
 
 #stats .stats-item-right:not(:last-child)::after {
   content: "";
-  @apply bg-primary/[.2] absolute top-0 right-0 bottom-0 w-[1px];
-  transform: skew(-20deg);
+  @apply bg-primary/[.2] absolute top-0 -right-2 bottom-0 w-[1px];
+  transform: skew(-15deg);
   transform-origin: top right;
 }
 
@@ -90,4 +90,8 @@ body {
   border: 1px solid #E9EBF8;
   background: #FFF;
   box-shadow: 0px 4px 20px 0px rgba(0, 21, 121, 0.10);
+}
+
+.faq-section {
+  background: linear-gradient(110.21deg, #89D3EB 1.11%, #2F87A4 45.11%);
 }
