Popup on button click

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,7 @@ body {
   @apply h-full md:h-[calc(100vh-4rem)];
   background: var(--blue-grdient, linear-gradient(110deg, #89D3EB 1.11%, #2F87A4 45.11%));
 }
+
 .banner-gradient {
   background: linear-gradient(110deg, #2F87A4 1.11%, #70b4ca 45.11%);
 }
@@ -103,9 +104,21 @@ body {
   box-shadow: 0px 4px 16px 0px #0919260A;
 }
 
-.footer-contact-links{
+.footer-contact-links {
   @apply bg-primary rounded-full p-2
 }
-.footer-contact-links .link{
+
+.footer-contact-links .link {
   @apply text-white font-bold
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide arrows for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
